# DiskBloom

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_linux.sh  build_windows.bat  pyproject.toml  requirements.txt
.github/workflows/: build.yml
app/: __init__.py
app/core/: __init__.py  deletion.py  file_types.py  filters.py  formatting.py  models.py  scanner.py  treemap_layout.py
app/core/scanners/: __init__.py  base.py  benchmark.py  capabilities.py  everything_scanner.py  parallel_scanner.py  standard_scanner.py  windows_fast_scanner.py
app/services/: __init__.py  config.py  privileges.py  recent_paths.py
app/ui/: main_window.py  theme.py
app/ui/dialogs/: confirm_delete.py  onboarding.py  settings.py
app/ui/widgets/: __init__.py  item_model.py  polished.py  reclaim_meter.py  scan_overlay.py  size_delegate.py  treemap.py
docs/: architecture.md  performance.md  roadmap.md
screenshots/: README.md
scripts/: render_screenshots.py
tests/: test_deletion.py  test_file_types.py  test_filters.py  test_formatting.py  test_scanners.py  test_tree_calculations.py  test_treemap_layout.py
